set scroll-table css style to fix column alignment

--- a/didi.css
+++ b/didi.css
@@ -679,6 +679,6 @@ li.paragraph {text-indent: -1em }
 .no-backcolor{background-color:inherit}
 
 .scroll-table { table-layout: fixed}
-.scroll-table>thead,.scroll-table>tbody { float:left; width: 100%; display: table}
-.scroll-table>tbody { display: block; width: 100%;overflow-y: auto }
-.scroll-table>thead>tr,.scroll-table>tbody>tr { width: 100%; display: table}
+.scroll-table>thead,.scroll-table>tbody { float:left; width: 100%; display: block;table-layout: fixed}
+.scroll-table>tbody { overflow-y: auto }
+.scroll-table>thead>tr,.scroll-table>tbody>tr { width: 100%; display: table; table-layout: fixed}
